Fetching and plotting WBI data dot-by-dot.

--- a/irb.foc.forecaster/foc/web/templates/index.html
+++ b/irb.foc.forecaster/foc/web/templates/index.html
@@ -3,6 +3,10 @@
 {% block title %}Hello world!{% endblock %}
 {% block page_title %}Hello world!{% endblock %}
 
+{% block javascript %}
+	<script src="/static/js/example_chart.js" type="text/javascript"></script>
+{% endblock %}
+
 {% block content %}
 
 <table>
@@ -11,4 +15,8 @@
 	{% endfor %}
 </table>
 
+<div id="container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+
+
 {% endblock %}
+
