--- a/irb.foc.forecaster/foc/web/templates/base.html
+++ b/irb.foc.forecaster/foc/web/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="en">
 <head>
-	<script src="/static/js/jquery-1.7.2.js" type="text/javascript"></script>
+	<script src="/static/js/jquery-1.7.2.min.js" type="text/javascript"></script>
 	<script src="/static/js/highcharts.js" type="text/javascript"></script>
 	
 	{% block javascript %}{% endblock %}
