--- a/irb.foc.forecaster/foc/web/templates/index.html
+++ b/irb.foc.forecaster/foc/web/templates/index.html
@@ -1,14 +1,27 @@
 {% extends "base.html" %}
 
-{% block title %}Hello world!{% endblock %}
-{% block page_title %}Hello world!{% endblock %}
+{% block title %}{% endblock %}
+{% block page_title %}{% endblock %}
 
 {% block javascript %}
 	<script src="/static/js/example_chart.js" type="text/javascript"></script>
+	
+	<link rel="stylesheet" type="text/css" href="/static/css/jquery.multiselect.css" />
+	<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/ui-lightness/jquery-ui.css" />
+	<!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script> -->
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="/static/js/jquery.multiselect.js"></script>
+	<script type="text/javascript">
+	$(function(){
+		$("select").multiselect();
+	});
+	</script>
+
 {% endblock %}
 
 {% block content %}
 
+Loaded countries:
 <table>
 	{% for v in countries %}
 		<tr><td>{{v}}</td></tr>
@@ -17,6 +30,23 @@
 
 <div id="container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 
+<h3>Select countries</h3>
+<p>
+	<select title="Basic example" multiple="multiple" name="example-basic" size="5">
+	<option value="option1">Option 1</option>
+	<option value="option2">Option 2</option>
+	<option value="option3">Option 3</option>
+	<option value="option4">Option 4</option>
+	<option value="option5">Option 5</option>
+	<option value="option6">Option 6</option>
+	<option value="option7">Option 7</option>
+	<option value="option8">Option 8</option>
+	<option value="option9">Option 9</option>
+	<option value="option10">Option 10</option>
+	<option value="option11">Option 11</option>
+	<option value="option12">Option 12</option>
+	</select>
+</p>
 
 {% endblock %}
 
