Refactoring Highcharts plotting and adding D3 example (not working yet).

--- a/irb.foc.forecaster/foc/web/templates/index.html
+++ b/irb.foc.forecaster/foc/web/templates/index.html
@@ -17,15 +17,7 @@
 		$("select").multiselect();
 		$("#send-request").button();
 		
-		//$("#send-request").click( function(){
-		//	$.ajax("../getdata/", {
-		//		data: {
-		//			countries: $("select").val()
-		//		}
-		//	});
-		//});
-		
-		$("#send-request").click( requestData2 );
+		$("#send-request").click( requestData );
 		
 		
 	});
