--- a/irb.foc.forecaster/foc/web/templates/d3_example.html
+++ b/irb.foc.forecaster/foc/web/templates/d3_example.html
@@ -3,7 +3,7 @@
 {% block javascript %}
 
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-<link type="text/css" rel="stylesheet" href="/static/css/asas.css"/>
+<link type="text/css" rel="stylesheet" href="/static/css/style.css"/>
 
  <style type="text/css">
 
