--- a/irb.foc.forecaster/foc/web/templates/index.html
+++ b/irb.foc.forecaster/foc/web/templates/index.html
@@ -7,14 +7,16 @@
 	<script src="/static/js/example_chart.js" type="text/javascript"></script>
 	
 	<link rel="stylesheet" type="text/css" href="/static/css/jquery.multiselect.css" />
+	<link rel="stylesheet" type="text/css" href="/static/css/jquery.multiselect.filter.css" />
 	<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/ui-lightness/jquery-ui.css" />
 	<!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script> -->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/static/js/jquery.multiselect.js"></script>
+	<script type="text/javascript" src="/static/js/jquery.multiselect.filter.js"></script>
 	
 	<script type="text/javascript">
 	$(function(){
-		$("select").multiselect();
+		$("select").multiselect().multiselectfilter();
 		$("#send-request").button();
 		
 		$("#send-request").click( requestData );
@@ -46,9 +48,21 @@ Loaded countries:
 	<!-- {% for v in countries %}
 		<option value="{{v}}">{{v}}</option>
 	{% endfor %} -->
+	<option value="ALB">ALB</option>
+	<option value="ARG">ARG</option>
+	<option value="AUT">AUT</option>
+	<option value="BRA">BRA</option>
+	<option value="ESP">ESP</option>
+	<option value="GBR">GBR</option>
+	<option value="GRC">GRC</option>
 	<option value="HRV">HRV</option>
 	<option value="ITA">ITA</option>
-	<option value="BRA">BRA</option>
+	<option value="JPN">JPN</option>
+	<option value="MEX">MEX</option>
+	<option value="NOR">NOR</option>
+	<option value="SAU">SAU</option>
+	<option value="SWE">SWE</option>
+	<option value="TUR">TUR</option>
 	<option value="USA">USA</option>
 	</select>
 	</td>
