--- a/irb.foc.forecaster/foc/web/templates/d3_example.html
+++ b/irb.foc.forecaster/foc/web/templates/d3_example.html
@@ -82,6 +82,6 @@ circle {
     <!-- <script type="text/javascript" src="d3/d3.js"></script>
     <script type="text/javascript" src="d3/d3.csv.js"></script> -->
 	
-	<script type="text/javascript" src="/static/js/iris.js"></script>
+	<script type="text/javascript" src="/static/js/iris2.js"></script>
 
 {% endblock %}
