--- a/irb.foc.forecaster/templates/index_d3.html
+++ b/irb.foc.forecaster/templates/index_d3.html
@@ -39,11 +39,18 @@
 		
 		$( "#slider-years" ).slider({
 			range: true,
-			min: 0,
-			max: 500,
+			min: 1950,
+			max: 2012,
 			values: [ 1950, 2012 ],
 			slide: function( event, ui ) {
-				$( "#amount" ).val( "$" + ui.values[ 0 ] + " - $" + ui.values[ 1 ] );
+				$( "#amount" ).val( ui.values[ 0 ] + " - " + ui.values[ 1 ] );
+
+				d3.selectAll(".cell circle")
+				  .classed("hidden",function(d){
+				  	         			var min = $("#slider-years").slider( "values", 0 );
+							 			var max = $("#slider-years").slider( "values", 1 );
+				  	         			return (d.date>=min) && (d.date<=max) ? 0 : 1;});
+				  
 			}
 		});
 		$( "#amount" ).val( $( "#slider-years" ).slider( "values", 0 ) + " - " + $( "#slider-years" ).slider( "values", 1 ) );
@@ -140,7 +147,10 @@
 			</p>
 			<div id="slider-years"></div>
 			
+			<div id="empty-div" style="width:500px; height:50px"></div>
+			
 		</div>
+		
 		
 	</div>
 
