Modified list of years in web platform and ajax response so that it returns only years with at least one indicator value.

--- a/irb.foc.forecaster/static/css/scatter-matrix.css
+++ b/irb.foc.forecaster/static/css/scatter-matrix.css
@@ -124,7 +124,7 @@ circle {
 
 .hidden {
   fill: #ccc;
-  fill-opacity: .5;
+  fill-opacity: .2;
 }
 
 .hidden-row {
@@ -159,7 +159,7 @@ circle {
 	border-collapse:collapse;
 }
 
-#data-table tr td , #years-table > tbody > tr > td {
+#data-table tr td {
 	border:1px solid orange;
 }
 
@@ -168,7 +168,7 @@ circle {
 }
 
 
-#data-table > tr:hover , #data-list > p:hover , #years-table > tbody > tr > td:hover
+#data-table > tr:hover , #data-list > p:hover , #years-table > p > span:hover
 {
 	color:red;
 	cursor:default;
@@ -178,5 +178,10 @@ circle {
 {
 	font-family:"Courier New", Courier, monospace;
 	font-size: 11px;
+	width: 600px;
+}
+
+.highlighted-year {
+	color:red;
 }
 
