--- a/irb.foc.forecaster/static/css/scatter-matrix.css
+++ b/irb.foc.forecaster/static/css/scatter-matrix.css
@@ -185,3 +185,37 @@ circle {
 	color:red;
 }
 
+#rules-display {
+	font-family:"Courier New", Courier, monospace;
+	font-size: 14px;
+	border:1px dashed;
+	border-radius:5px;
+	border-color:gray;
+	padding:10px;
+	width:600px;
+	overflow:auto;
+}
+
+.tooltip {
+	font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
+	color: rgb(28, 148, 196);
+	font-size: 11px;
+	font-weight: bold;
+}
+
+.tooltip:hover {
+	color:orange;
+	cursor:default;
+}
+
+.variable {
+	color:steelblue;
+}
+
+.operator {
+	color:black;
+}
+
+.value {
+	color:darkorange;
+}
